# autosleep

./: README.md  autosleep-csv-layout.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
src/: main.py
src/autosleep/: __init__.py  test_autosleep.py
