[project]
name = "autosleep"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shota Narisaka", email = "shootacean@gmail.com" }
]
dependencies = [
    "pandas>=2.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "autosleep:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.1.1",
    "ruff>=0.2.1",
    "pytest>=8.0.0",
]

[tool.rye.scripts]
format = { cmd = "black src/" }
lint = { cmd = "ruff src/" }
lint-fix = { cmd = "ruff --fix src/" }
test = { cmd = "pytest src/" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/autosleep"]
